@@ -188,7 +188,11 @@ class ModelSQL(ModelStorage):
                 if field.model_name in ('res.user', 'res.group'):
                     ref = field.model_name.replace('.', '_')
                 else:
-                    ref = pool.get(field.model_name)._table
+                    ref_model = pool.get(field.model_name)
+                    ref = ref_model._table
+                    # Create foreign key table if missing
+                    if not TableHandler.table_exist(ref):
+                        TableHandler(ref_model)
                 if field_name in ['create_uid', 'write_uid']:
                     # migration from 3.6
                     table.drop_fk(field_name)
