@@ -1,3 +1,4 @@
+* Remove order constraint on register ModelSQL
 * Add relate from report to translations
 
 Version 4.2.0 - 2016-11-28
